--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -2,31 +2,35 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp"
     app:cardElevation="3dp"
+    android:paddingBottom="8dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    >
+    android:layout_width="match_parent">
 
     <ImageView
         android:id="@+id/ivUrlImage"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/default_image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
+        android:textSize="15sp"
+        android:text="@string/app_name"
         app:layout_constraintTop_toBottomOf="@+id/ivUrlImage"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
